--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </script>
     <button 
       onclick="setColorTheme()" 
-      style="position: absolute; right: 20px;">
+      id="colorButton"
+    >
       Set Color Theme
     </button>
   </head>
